# retro-dapp

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  brute_agent.py  package.json  random_agent.py  setup.py
.github/workflows/: build.yml  clang-format-check.yml  deploy.yml  nodejs.yml  python.yml
LICENSES/: MIT.txt  README.md  ThirdParty.md
backend/: .gitignore  Dockerfile  dapp.json  deploy-testnet.yml  docker-bake.hcl  docker-bake.override.hcl  docker-compose-host-testnet.yml  docker-compose-host.yml  docker-compose-testnet.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  requirements.in  requirements.txt  retroai.py
backend/docker-riscv/: Dockerfile  dependencies  shasumfile
frontend/: .gitignore  package.json  tsconfig.json  vite.config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: BlankPage.css  BlankPage.tsx  HomePage.css  HomePage.tsx
lib/: CMakeLists.txt  build-ci.sh
lib/api/: imgproc.cpp  imgproc.hpp  scene.cpp  scene.hpp  video.cpp  video.hpp
lib/kernels/cpu/: cpu_imgproc.cpp  cpu_imgproc.hpp  cpu_scene.cpp  cpu_scene.hpp  cpu_video.cpp  cpu_video.hpp
lib/motion_tracker/: motion_tracker.cpp  motion_tracker.hpp  motion_tracker_embinder.cpp  vision_graph.cpp  vision_graph.hpp
lib/stream_decoder/: stream_decoder.cpp  stream_decoder.h  stream_decoder_embinder.cpp
lib/stream_encoder/: stream_encoder.cpp  stream_encoder.hpp  stream_encoder_embinder.cpp
lib/utils/: emscripten_utils.cpp  emscripten_utils.hpp  frame_pool.cpp  frame_pool.hpp  image_utils.cpp  image_utils.hpp  math_utils.cpp  math_utils.hpp
lib/video/: video_frame.cpp  video_frame.hpp
openai/: .gitignore  CMakeLists.txt  setup.py
openai/cores/snes/: conffile.h
openai/retro/data/: __init__.py
openai/src/: search.cpp
retroai/: brute.py  enums.py  retro_env.py
src/backend/: .gitignore  Makefile  dapp.cpp
src/engine/: CMakeLists.txt
src/engine/core/: retro_engine.cpp  retro_engine.hpp  retro_engine_embinder.cpp
src/frontend/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
src/frontend/public/: manifest.json
src/frontend/src/: App.css  App.tsx  index.css  main.tsx
src/frontend/src/components/: BlankPage.css  BlankPage.tsx  HomePage.css  HomePage.tsx  RetroEngineComponent.css  RetroEngineComponent.tsx
src/learning/: README.md  pyproject.toml
src/learning/agents/: brute_agent.py  random_agent.py
src/learning/retroai/: brute.py  enums.py  retro_env.py
src/learning/test/: conftest.py  run_ci_tasks.py  test_random_agent.py
tools/: .gitignore  Makefile  build-depends.sh  build-paths.sh  build-wasm.sh  download-emscripten.sh  setup_environment.mk  setup_paths.mk  setup_stages.mk
tools/depends/native/emscripten/: package.mk
tools/depends/wasm/ade/: package.mk
tools/depends/wasm/codecbox.js/: 0001-Fix-error-building-OpenH264.patch  0002-Fix-errors-building-with-latest-llvm.patch  0003-Enable-select-filter.patch  0004-Don-t-call-bash-with-x.patch  0005-Don-t-download-FFmpeg.patch  package.mk
tools/depends/wasm/ffmpeg/: package.mk  pkg_config
tools/depends/wasm/libvpx/: package.mk
tools/depends/wasm/opencv/: 0001-GAPI-Implement-RGBA2Gray-and-GBRA2Gray.patch  0001-temp-Hack-opencv.js-to-ES6.patch  opencv_js.config.py  package.mk
tools/depends/wasm/x264/: 0001-Remove-problematic-configure-test.patch  package.mk
